COMMIT VERSION 0.0.36
limpieza de import que no se usan en todo el proyecto.

Implementación completa del plan de pruebas para el módulo MasterData, siguiendo los principios de Clean Architecture.

- **Dominio:** Pruebas unitarias para MasterRoot, MasterTree y MasterTreeProvider, validando reglas de negocio e invariantes.
- **Aplicación:** Pruebas unitarias con Mockito para los casos de uso (Create, FindById, FindAll, ChangeStatus), validando la orquestación y el manejo de errores.
- **Infraestructura:**
  - Pruebas de integración (@DataJpaTest) para el repositorio JPA y el adaptador de persistencia usando H2 en memoria y scripts SQL.
  - Corrección en JwtTokenProviderAdapter para manejar claims nulos y facilitar el testing.
- **Presentación:**
  - Prueba E2E de integración (@SpringBootTest) para MasterRootController.
  - Creación de TestSecurityConfig para aislar las pruebas de la capa de seguridad (desactivación de CSRF para test).
- **Configuración:** Actualización de pom.xml con dependencias de spring-security-test y limpieza de datos en data-test.sql para garantizar la idempotencia de las pruebas E2E.